--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="sass/main.css">
+  <link rel="stylesheet" type="text/css" href="src/sass/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
